Part of the Cookbook task
This is the login part of the task.

--- a/03 - Remote Data and Authentication/login.html
+++ b/03 - Remote Data and Authentication/login.html
@@ -28,6 +28,7 @@
     </form>
 
     <script>
+        // part of the Cookbook task
         document.getElementById('registerForm').addEventListener('submit', function(e) {
             e.preventDefault();
 
