--- a/04 - Single Page Applications/Lab/Cookbook/lesson-04/base/index.html
+++ b/04 - Single Page Applications/Lab/Cookbook/lesson-04/base/index.html
@@ -71,6 +71,22 @@
                 </form>
             </article>
         </section>
+
+        <section id="detailsSection">
+            <p style="color: white">Loading...</p>
+        </section>
+
+        <section id="editSection">
+            <article>
+                <h2>Edit Recipe</h2>
+                <form>
+                    <label>Name: <input type="text" name="name" placeholder="Recipe name"></label>
+                    <label>Image: <input type="text" name="img" placeholder="Image URL"></label>
+                    <label class="ml">Ingredients: <textarea name="ingredients" placeholder="Enter ingredients on separate lines"></textarea></label>
+                    <input type="submit" value="Update Recipe">
+                </form>
+            </article>
+        </section>
     </div>
 </body>
 
