Added edit button and functionality

--- a/04 - Single Page Applications/Lab/Cookbook/lesson-04/base/index.html
+++ b/04 - Single Page Applications/Lab/Cookbook/lesson-04/base/index.html
@@ -80,6 +80,7 @@
             <article>
                 <h2>Edit Recipe</h2>
                 <form>
+                    <input type="hidden" name="id">
                     <label>Name: <input type="text" name="name" placeholder="Recipe name"></label>
                     <label>Image: <input type="text" name="img" placeholder="Image URL"></label>
                     <label class="ml">Ingredients: <textarea name="ingredients" placeholder="Enter ingredients on separate lines"></textarea></label>
