--- a/04 - Single Page Applications/Lab/Cookbook/lesson-04/base/index.html
+++ b/04 - Single Page Applications/Lab/Cookbook/lesson-04/base/index.html
@@ -83,7 +83,10 @@
                     <input type="hidden" name="id">
                     <label>Name: <input type="text" name="name" placeholder="Recipe name"></label>
                     <label>Image: <input type="text" name="img" placeholder="Image URL"></label>
-                    <label class="ml">Ingredients: <textarea name="ingredients" placeholder="Enter ingredients on separate lines"></textarea></label>
+                    <label class="ml">Ingredients: <textarea name="ingredients"
+                            placeholder="Enter ingredients on separate lines"></textarea></label>
+                    <label class="ml">Preparation: <textarea name="steps"
+                            placeholder="Enter preparation steps on separate lines"></textarea></label>
                     <input type="submit" value="Update Recipe">
                 </form>
             </article>
