Added edit functionality
Can't figure out the img part

--- a/04 - Single Page Applications/Exercise/02.Movies/index.html
+++ b/04 - Single Page Applications/Exercise/02.Movies/index.html
@@ -158,6 +158,7 @@
                         <label for="imageUrl">Image url</label>
                         <input type="text" class="form-control" placeholder="Image Url" value="" name="imageUrl">
                     </div>
+                    <input type="hidden" name="id">
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </section>
